# uv-bug-6041

./: README.md
A/: pyproject.toml
B/: pyproject.toml
app/: pyproject.toml
base/: pyproject.toml
