[project]
name = "b"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = ["base"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
base = {git = "https://github.com/NickCrews/uv-bug-6041.git/", branch = "main", subdirectory="base"}