[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "a",
    "b",
    "base"
]

[tool.uv.sources]
a = {git = "https://github.com/NickCrews/uv-bug-6041.git/", branch = "main", subdirectory="a"}
b = {git = "https://github.com/NickCrews/uv-bug-6041.git/", branch = "main", subdirectory="b"}
base = {git = "https://github.com/NickCrews/uv-bug-6041.git/", branch = "main", subdirectory="base"}
